--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,6 @@
   "AllowedHosts": "*",
   
   "ConnectionStrings": {
-    "MovieContext": "Server=tcp:mikkymovie.database.windows.net,1433;Initial Catalog=mikkymoviedb;Persist Security Info=False;User ID=mikkysqladmin;Password=mikkymouse@67890!!;Encrypt=True; TrustServerCertificate=False;"
+    "MovieContext": "Server=tcp:abc.database.windows.net,1433;Initial Catalog=abc;Persist Security Info=False;User ID=abc;Password=abc;Encrypt=True; TrustServerCertificate=False;"
   }
 }
